objects/maps__TPHistory__c.object
<CustomObject>
    <fields>
        <fullName>maps__Alignment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Alignment</label>
        <referenceTo>maps__TPAlignment__c</referenceTo>
        <relationshipLabel>History Records</relationshipLabel>
        <relationshipName>HistoryRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__SnapshotId__c</fullName>
        <label>Off-Platform Snapshot Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <label>Type of History Record</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Snapshot</fullName>
                    <default>true</default>
                    <label>Snapshot</label>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
                <value>
                    <fullName>Territory Modification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Alignment History Record</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alignment History Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>